# ps_gametitlefinder

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
src/assets/: PS3_GAMES.tsv  PSV_GAMES.tsv
src/assets/themes/: PSV_THEMES.tsv
src/ps_gametitlefinder/: psgtf.py
src/psgtf/: psgtf.py
src/psgtf/assets/: PSM_GAMES.tsv  PSP_GAMES.tsv  PSX_GAMES.tsv
src/psgtf/assets/dlcs/: PS3_DLCS.tsv
src/psgtf/models/: PlaystationGame.py
