[metadata]
name = ps_gametitlefinder
version = 0.0.12
author = Vladimir Ventura
author_email = vladventura@outlook.es
description = A small tool that finds Playstation game titles given a game id
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vladventura/ps_gametitlefinder
project_urls =
    Bug Tracker = https://github.com/vladventura/ps_gametitlefinder/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Games/Entertainment
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers
    
[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires:
    pandas==1.4.2
    requests==2.28.0

[options.packages.find]
where = src